[TASK] Minor dark mode fixes

--- a/src/_minimal/less/base/general.less
+++ b/src/_minimal/less/base/general.less
@@ -67,6 +67,7 @@ button {
   background-color: transparent;
   padding: 0;
   font-size: inherit;
+  color: inherit;
 
   &:focus {
     outline: 0;
