--- a/src/_minimal/less/globals/colors.less
+++ b/src/_minimal/less/globals/colors.less
@@ -12,6 +12,7 @@
   background: rgb(255 255 255 / var(--cl-opacity));
   foreground: rgb(255 255 255 / var(--cl-opacity));
   foreground-solid: rgb(255 255 255);
+  foreground-active: var(--cl-backdrop);
   opacity: 1;
 }
 
@@ -25,6 +26,7 @@
   background: rgb(53 53 53 / var(--cl-opacity));
   foreground: rgb(94 94 94 / var(--cl-opacity));
   foreground-solid: rgb(94 94 94);
+  foreground-active: var(--cl-background);
 }
 
 @state-colors: {
